@@ -1,9 +1,13 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.464 2005/11/06 21:18:35 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.465 2005/11/07 16:48:33 agaffney Exp $
 
 *GLI-0.3 (27 Oct 2005)
+
+  7 Nov 2005; Andrew Gaffney <agaffney@gentoo.org>
+  src/net/server/handlers/WebGLIHandler.py:
+  initial 'pretty' partition table display support
 
   6 Nov 2005; Andrew Gaffney <agaffney@gentoo.org>
   src/GLIStorageDevice.py:
